# insight

./: LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: update_readme.yaml
src/: github_utils.py  logger_utls.py  parser.py
